--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,18 +2,18 @@
 # General
 --------------------------------------------------------------*/
 body {
-  font-family: 'DM Sans', sans-serif;
+  font-family: 'Inter', sans-serif;
   color: #fff;
   background-color: #18191a;
 }
 
 a {
-  color: #b08657;
+  color: #37619e;
   text-decoration: none;
 }
 
 a:hover {
-  color: #be844d;
+  color: #407edb;
   text-decoration: none;
 }
 
@@ -23,7 +23,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: "DM Sans", sans-serif;
+  font-family: 'Inter', sans-serif;
 }
 
 .center-block {
@@ -31,6 +31,7 @@ h6 {
   margin-left: auto;
   margin-right: auto;
 }
+
 
 
 /*--------------------------------------------------------------
@@ -43,7 +44,7 @@ h6 {
   right: 15px;
   bottom: 15px;
   z-index: 996;
-  background: #b08657;
+  background: #37619e;
   width: 40px;
   height: 40px;
   border-radius: 50px;
@@ -57,7 +58,7 @@ h6 {
 }
 
 .back-to-top:hover {
-  background: #70573a;
+  background: #407edb;
   color: #fff;
 }
 
@@ -85,7 +86,7 @@ h6 {
   position: fixed;
   top: calc(50% - 30px);
   left: calc(50% - 30px);
-  border: 6px solid #b08657;
+  border: 6px solid #37619e;
   border-top-color: #fff;
   border-bottom-color: #fff;
   border-radius: 50%;
@@ -137,7 +138,8 @@ h6 {
 
 @media (min-width: 991px) {
   /* #main {
-    margin-left: 100px;
+    margin-left: 90px;
+    margin-right: 60px;
   } */
 
 
@@ -170,12 +172,13 @@ h6 {
   display: flex;
   align-items: center;
   color: #fff;
-  padding: 10px 18px;
+  padding: 17px;
+  padding-left: 17px;
   margin-bottom: 8px;
   transition: 0.3s;
   font-size: 15px;
-  border-radius: 50px;
-  background: #494042;
+  border-radius: 30px;
+  background: #131c29;
   height: 56px;
   width: 100%;
   overflow: hidden;
@@ -212,7 +215,7 @@ h6 {
 .nav-menu .active:focus,
 .nav-menu li:hover>a {
   color: #fff;
-  background: #b08657;
+  background: #37619e;
 }
 
 .nav-menu a:hover span,
@@ -242,7 +245,7 @@ h6 {
   top: 10px;
   z-index: 9998;
   border: 0;
-  background: #494042;
+  background: #131c29;
   font-size: 30px;
   transition: all 0.4s;
   outline: none !important;
@@ -267,38 +270,76 @@ h6 {
 
 .mobile-nav-active .mobile-nav-toggle {
   color: #fff;
-  background-color: #b08657;
+  background-color: #37619e;
 }
 
 /*--------------------------------------------------------------
 # Hero Section
 --------------------------------------------------------------*/
+#centered-container {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+#profile-picture {
+  background-image: url("../img/about.png");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  border-radius: 110px;
+  width: 270px;
+  height: 270px;
+  position: relative;
+  left: 50%;
+  transform: translate(-50%, 0);
+}
+
+#title {
+  margin-top: 24px;
+  font-size: 40px;
+  font-weight: 600;
+  text-align: center;
+  display: block;
+  cursor: default;
+}
+
+#position {
+  font-size: 20px;
+  color: #407edb;
+  text-align: center;
+  display: block;
+  cursor: default;
+}
+
+#media {
+  margin-top: 60px;
+  width: 415px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.media_link {
+  color: #ffffff;
+  transition: all .083s ease-in-out;
+}
+
+.media_link:hover {
+  transform: translateY(-2px);
+  opacity: 1;
+}
+
+
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("../img/hero-bg.png") top center no-repeat;
+  background: url("../img/hero-bg.png") top right no-repeat;
   background-size: cover;
   position: relative;
+  backdrop-filter: blur(5px);
 }
 
-#hero .hero-container {
-  position: absolute;
-  bottom: 0;
-  top: 0;
-  left: 0;
-  right: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  text-align: center;
-}
-
-@media (min-width: 992px) {
-  #hero {
-    padding-left: 160px;
-  }
-}
 
 #hero:before {
   content: "";
@@ -323,12 +364,12 @@ h6 {
   color: #45505b;
   margin: 15px 0 0 0;
   font-size: 26px;
-  font-family: "DM Sans", sans-serif;
+  font-family: 'Inter', sans-serif;
   cursor: default;
 }
 
 #hero p span {
-  color: #b08657;
+  color: #37619e;
   letter-spacing: 1px;
   cursor: default;
 }
@@ -337,18 +378,6 @@ h6 {
   margin-top: 30px;
 }
 
-#hero .social-links a {
-  font-size: 24px;
-  display: inline-block;
-  color: #b08657;
-  line-height: 1;
-  margin-right: 20px;
-  transition: 0.3s;
-}
-
-#hero .social-links a:hover {
-  color: #70573a;
-}
 
 @media (max-width: 992px) {
   #hero {
@@ -366,46 +395,13 @@ h6 {
     font-size: 25px;
     line-height: 24px;
   }
-}
 
-/*--------------------------------------------------------------
-# Sections General
---------------------------------------------------------------*/
-section {
-  padding: 60px 0;
-  overflow: hidden;
-}
-
-.section-title {
-  text-align: center;
-  padding-bottom: 30px;
-}
-
-.section-title h2 {
-  font-size: 32px;
-  font-weight: bold;
-  margin-bottom: 20px;
-  padding-bottom: 20px;
-  position: relative;
-  color: #fff;
-  cursor: default;
-}
-
-.section-title h2::after {
-  content: "";
-  position: absolute;
-  display: block;
-  width: 40px;
-  height: 3px;
-  background: #b08657;
-  bottom: 0;
-  left: calc(50% - 20px);
-  border-radius: 20px;
-}
-
-.section-title p {
-  margin-bottom: 0;
-  cursor: default;
+  #media {
+    margin-top: 60px;
+    width: 330px;
+    display: flex;
+    justify-content: space-between;
+  }
 }
 
 /*--------------------------------------------------------------
@@ -435,7 +431,7 @@ section {
   margin-left: 23px;
   transition: all ease-in-out 0.3s;
   position: relative;
-  background-color: #2c2925;
+  background-color: #313131f1;
   text-align: center;
   border-radius: 8px;
   box-shadow: 0px 0 25px rgba(var(--color-black-rgb), 0.1);
@@ -446,7 +442,7 @@ section {
   margin: 0;
   width: 72px;
   height: 72px;
-  background: #be844d;
+  background: #37619e;
   border-radius: 50px;
   display: flex;
   align-items: center;
@@ -458,7 +454,7 @@ section {
   position: absolute;
   top: -36px;
   left: calc(50% - 36px);
-  border: 6px solid #be844d;
+  border: 6px solid #37619e;
 }
 
 .about-me .details h3 {
@@ -473,13 +469,13 @@ section {
 
 
 .about-me .service-item:hover .details h3 {
-  color: #be844d;
+  color: #407edb;
 }
 
 .about-me .service-item:hover .details .icon,
 .socials .service-item:hover .details .icon {
-  background-color: #be844d;
-  border: 2px solid #be844d;
+  background-color: #407edb;
+  border: 2px solid #407edb;
 }
 
 .about-me .service-item:hover .details .icon i {
@@ -492,231 +488,172 @@ section {
 
 
 /*--------------------------------------------------------------
-# Projects/ Info
+# Sections General
 --------------------------------------------------------------*/
-.projects .icon-box,
-.info .icon-box {
+section {
+  padding: 60px 0;
+  overflow: hidden;
+}
+
+.section-title {
+  text-align: center;
+  padding-bottom: 30px;
+}
+
+.section-title h2 {
+  font-size: 32px;
+  font-weight: bold;
+  text-transform: uppercase;
   margin-bottom: 20px;
-  padding: 30px;
-  border-radius: 6px;
-  background: #2c2925;
-}
-
-.projects .icon-box i,
-.info .icon-box i {
-  float: left;
-  color: #fff;
-  font-size: 40px;
-  line-height: 0;
-  margin-top: 0.5em;
-}
-
-.projects .icon-box h4,
-.info .icon-box h4 {
-  margin-left: 70px;
-  font-weight: 700;
-  margin-bottom: 15px;
-  font-size: 18px;
+  padding-bottom: 20px;
+  position: relative;
   color: #fff;
   cursor: default;
 }
 
-.projects .icon-box p,
-.info .icon-box p {
-  margin-left: 70px;
-  line-height: 24px;
-  font-size: 14px;
+.section-title h2::after {
+  content: "";
+  position: absolute;
+  display: block;
+  width: 40px;
+  height: 3px;
+  background: #37619e;
+  bottom: 0;
+  left: calc(50% - 20px);
+  border-radius: 20px;
+}
+
+.section-title p {
+  margin-bottom: 0;
+  cursor: default;
+}
+
+
+/*--------------------------------------------------------------
+# Skills
+--------------------------------------------------------------*/
+.skills .progress {
+  height: 60px;
+  display: block;
+  background: none;
+  border-radius: 0;
+}
+
+.skills .progress .skill {
+  padding: 10px 0;
+  margin: 0;
+  text-transform: uppercase;
+  display: block;
+  font-weight: 600;
+  font-family: 'Inter', sans-serif;
   color: #fff;
   cursor: default;
 }
 
-.btn-outline-download {
-  color: #be844d;
-  border-color: #be844d;
-  margin-top: 1em;
-}
-
-.btn-outline-download:hover {
-  color: #000;
-  background-color: #be844d;
-}
-
-.operations-category {
-  font-weight: 700;
-  font-size: 26px;
-  color: #b08657;
+.skills .progress .skill .val {
+  float: right;
+  font-style: normal;
   cursor: default;
 }
 
-.qty-opsCat {
-  color: #a5875e;
+.skills .progress-bar-wrap {
+  background: #413a3b;
+  border-radius: 10px;
 }
 
-@media (min-width: 768px) {
-  .col-md-6.opscat {
-    flex: 0 0 auto;
-    width: 100%;
-  }
+.skills .progress-bar {
+  width: 1px;
+  height: 10px;
+  transition: 0.9s;
+  background-color: #37619e;
+  border-radius: 10px;
+}
+
+.skills-category {
+  font-size: 20px;
+  font-weight: bold;
+  padding-top: 26px;
+  cursor: default;
 }
 
 /*--------------------------------------------------------------
-# Portfolio
+# Resume
 --------------------------------------------------------------*/
-.portfolio .portfolio-item {
-  margin-bottom: 30px;
-}
-
-.portfolio #portfolio-flters {
-  padding: 0;
-  margin: 0 auto 25px auto;
-  list-style: none;
-  text-align: center;
-  background: #494042;
-  border-radius: 50px;
-  padding: 2px 15px;
-}
-
-.portfolio #portfolio-flters li {
-  cursor: pointer;
-  display: inline-block;
-  padding: 10px 15px;
-  font-size: 14px;
-  font-weight: 600;
-  line-height: 1;
-  text-transform: uppercase;
+.resume .resume-title {
+  font-size: 26px;
+  font-weight: 700;
+  margin-top: 20px;
+  margin-bottom: 20px;
   color: #fff;
-  margin-bottom: 5px;
-  transition: all 0.3s ease-in-out;
+  cursor: default;
 }
 
-.portfolio #portfolio-flters li:hover,
-.portfolio #portfolio-flters li.filter-active {
-  color: #b08657;
-}
-
-.portfolio #portfolio-flters li:last-child {
-  margin-right: 0;
-}
-
-.portfolio .portfolio-wrap {
-  transition: 0.3s;
+.resume .resume-item {
+  padding: 0 0 20px 20px;
+  margin-top: -2px;
+  border-left: 2px solid #37619e;
   position: relative;
-  overflow: hidden;
-  z-index: 1;
-  background: rgba(69, 80, 91, 0.8);
-  border-radius: 8px;
-}
-
-.portfolio .portfolio-wrap::before {
-  content: "";
-  background: #7a4e22b0;
-  position: absolute;
-  left: 30px;
-  right: 30px;
-  top: 30px;
-  bottom: 30px;
-  transition: all ease-in-out 0.3s;
-  z-index: 2;
-  opacity: 0;
-}
-
-.portfolio .portfolio-wrap .portfolio-info {
-  opacity: 0;
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  text-align: center;
-  z-index: 3;
-  transition: all ease-in-out 0.3s;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-.portfolio .portfolio-wrap .portfolio-info::before {
-  display: block;
-  content: "";
-  width: 48px;
-  height: 48px;
-  position: absolute;
-  top: 35px;
-  left: 35px;
-  border-top: 3px solid #d7dce1;
-  border-left: 3px solid #d7dce1;
-  transition: all 0.5s ease 0s;
-  z-index: 9994;
-}
-
-.portfolio .portfolio-wrap .portfolio-info::after {
-  display: block;
-  content: "";
-  width: 48px;
-  height: 48px;
-  position: absolute;
-  bottom: 35px;
-  right: 35px;
-  border-bottom: 3px solid #d7dce1;
-  border-right: 3px solid #d7dce1;
-  transition: all 0.5s ease 0s;
-  z-index: 9994;
-}
-
-.portfolio .portfolio-wrap .portfolio-info h4 {
-  font-size: 20px;
-  color: #fff;
-  font-weight: 600;
   cursor: default;
 }
 
-.portfolio .portfolio-wrap .portfolio-info p {
-  color: #fff;
-  font-size: 14px;
+.resume .resume-item h4 {
+  line-height: 18px;
+  font-size: 18px;
+  font-weight: bolder;
   text-transform: uppercase;
-  padding: 0;
-  margin: 0;
+  font-family: 'Inter', sans-serif;
+  color: #37619e;
+  margin-bottom: 10px;
   cursor: default;
 }
 
-.portfolio .portfolio-wrap .portfolio-links {
-  text-align: center;
-  z-index: 4;
-}
-
-.portfolio .portfolio-wrap .portfolio-links a {
-  color: #fff;
-  margin: 0 2px;
-  font-size: 28px;
+.resume .resume-item h5 {
+  font-size: 16px;
+  background: #37619e;
+  padding: 5px 15px;
   display: inline-block;
-  transition: 0.3s;
+  font-weight: 600;
+  margin-bottom: 10px;
+  border-radius: 20px;
+  cursor: default;
 }
 
-.portfolio .portfolio-wrap .portfolio-links a:hover {
-  color: #dbb488;
+.resume .resume-item ul {
+  padding-left: 20px;
 }
 
-.portfolio .portfolio-wrap:hover::before {
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  opacity: 1;
+.resume .resume-item ul li {
+  padding-bottom: 10px;
 }
 
-.portfolio .portfolio-wrap:hover .portfolio-info {
-  opacity: 1;
+.resume .resume-item:last-child {
+  padding-bottom: 0;
 }
 
-.portfolio .portfolio-wrap:hover .portfolio-info::before {
-  top: 15px;
-  left: 15px;
+.resume .resume-item::before {
+  content: "";
+  position: absolute;
+  width: 16px;
+  height: 16px;
+  border-radius: 50px;
+  left: -9px;
+  top: 5px;
+  background: #18191a;
+  border: 2px solid #37619e;
+  cursor: default;
 }
 
-.portfolio .portfolio-wrap:hover .portfolio-info::after {
-  bottom: 15px;
-  right: 15px;
+.resume .resume-item-present::before {
+  content: "";
+  position: absolute;
+  width: 16px;
+  height: 16px;
+  border-radius: 50px;
+  left: -9px;
+  top: 5px;
+  background: #37619e;
+  border: 2px solid #37619e;
+  cursor: default;
 }
 
 /*--------------------------------------------------------------
@@ -901,11 +838,11 @@ section {
   height: 12px;
   background-color: #fff;
   opacity: 1;
-  border: 1px solid #be844d;
+  border: 1px solid #37619e;
 }
 
 .portfolio-details .portfolio-details-slider .swiper-pagination .swiper-pagination-bullet-active {
-  background-color: #be844d;
+  background-color: #37619e;
 }
 
 .portfolio-details .portfolio-description {
@@ -974,14 +911,14 @@ section {
 }
 
 .btn-outline-download {
-  color: #be844d;
-  border-color: #be844d;
+  color: #37619e;
+  border-color: #37619e;
   margin-top: 1em;
 }
 
 .btn-outline-download:hover {
   color: #000;
-  background-color: #be844d;
+  background-color: #37619e;
 }
 
 
@@ -1022,7 +959,7 @@ h6 a {
 .port-cover.single-page h1, .port-cover.single-page .h1 {
   color: #fff;
   font-size: clamp(2rem, 3vw, 5rem);
-}
+}z
 
 .mb-4 {
   margin-bottom: 1.5rem !important;
@@ -1112,6 +1049,7 @@ h4.sa-post {
   color: #b3b3b3;
 }
 
+
 /*--------------------------------------------------------------
 # Footer
 --------------------------------------------------------------*/
@@ -1127,7 +1065,7 @@ h4.sa-post {
   font-size: 36px;
   font-weight: 700;
   position: relative;
-  font-family: "DM Sans", sans-serif;
+  font-family: "Inter", sans-serif;
   padding: 0;
   margin: 0 0 15px 0;
 }
@@ -1146,7 +1084,7 @@ h4.sa-post {
 #footer .social-links a {
   font-size: 18px;
   display: inline-block;
-  background: #b08657;
+  background: #37619e;
   color: #fff;
   line-height: 1;
   padding: 8px 0;
@@ -1156,12 +1094,6 @@ h4.sa-post {
   width: 36px;
   height: 36px;
   transition: 0.3s;
-}
-
-#footer .social-links a:hover {
-  background: #a80742;
-  color: #fff;
-  text-decoration: none;
 }
 
 #footer .copyright,
