--- a/buszy/css/style-buszy.css
+++ b/buszy/css/style-buszy.css
@@ -3,6 +3,10 @@
        display: none;
    }
 
+   .nav-link {
+       color: #000;
+   }
+
    #scrollUp {
        display: none !important;
    }
@@ -152,7 +156,7 @@
            box-shadow: 0 2px 16px rgba(0, 0, 0, 0.08);
            display: flex;
            margin: 12px 8px;
-           padding: 0 8px;
+           padding: 0 4px;
            width: 100%;
            max-width: 420px;
            justify-content: space-between;
@@ -174,7 +178,7 @@
            justify-content: center;
            padding: 8px 0 6px 0;
            margin: 4px 2px;
-           border-radius: 24px;
+           border-radius: 50px;
            transition: background 0.2s;
            cursor: pointer;
        }
@@ -188,6 +192,7 @@
            align-items: center;
            justify-content: center;
            margin-bottom: 2px;
+           color: #000;
        }
 
        .mobile-bottom-nav li.active .label {
@@ -200,8 +205,8 @@
        }
 
        .mobile-bottom-nav .label {
-           font-size: 13px;
-           color: #888;
+           font-size: 11px;
+           color: #000;
            margin-top: 0px;
            letter-spacing: 0.01em;
            transition: color 0.2s, font-weight 0.2s;
@@ -212,7 +217,7 @@
 
 
 
-   /* ----------------Table ART--------------------------*/
+   /* ---------------- Table ART - Light --------------------------*/
    .table {
        border-collapse: separate;
        border-spacing: 0;
@@ -348,10 +353,10 @@
    .bus-stop {
        transition-duration: 800ms;
        background-color: #fff;
-       padding-left: 2em;
-       padding-right: 2em;
-       padding-top: 1em;
-       padding-bottom: 1em;
+       padding-left: 1em;
+       padding-right: 1em;
+       padding-top: 0.5em;
+       padding-bottom: 0.5em;
        border-radius: 25px;
        position: relative;
        z-index: 1;
@@ -405,8 +410,8 @@
        font-size: 20px;
        border: 1px solid #2b2b2b33;
        box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.233), 0 4px 12px rgba(0, 0, 0, 0.1);
-       padding-top: 1em;
-       padding-bottom: 1em;
+       padding-top: 0.5em;
+       padding-bottom: 0.5em;
    }
 
    .list-group-item:hover {
@@ -439,6 +444,7 @@
        margin-right: 0em;
        text-align: center;
        margin-top: 20px;
+       margin-bottom: 20px;
    }
 
    .pw-btn-next {
@@ -586,7 +592,7 @@
        border: none;
        margin-left: 3em;
        margin-right: 3em;
-       width: 100px;
+       width: 80px !important;
    }
 
    .btn-unpin {
@@ -612,7 +618,7 @@
 
    .btn-nbs {
        margin-left: 0em !important;
-       width: 100px !important;
+       width: 80px !important;
    }
 
    .btn-toPin {
@@ -695,7 +701,7 @@
        color: #757575;
    }
 
-      .lg-menu {
+   .lg-menu {
        font-size: 20px;
        margin-bottom: 0px;
        font-weight: bolder;
@@ -768,4 +774,169 @@
        font-size: 17px;
    }
 
-   /* ---------------Card ART---------------------------*/
+
+
+   /* ---------------- Table ART - Dark ----------------------*/
+
+   body.dark-mode .table {
+       border: 1px solid #000;
+   }
+
+   body.dark-mode table th {
+       background-color: #7db603 !important;
+       color: #000;
+   }
+
+   body.dark-mode table td {
+       background-color: #1f1e1e;
+       color: #fff;
+       border-color: #000;
+   }
+
+   body.dark-mode .svcNum {
+       background-color: #7db603;
+       border-radius: 5px;
+       color: #000;
+   }
+
+   body.dark-mode .arrival-now {
+       color: #7db603;
+       font-weight: bold;
+   }
+
+   body.dark-mode .bus-stop {
+       background-color: #2e2e2e;
+       color: #fff !important;
+       border: 1px solid #2b2b2b33;
+       box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.233), 0 4px 12px rgba(0, 0, 0, 0.1);
+   }
+
+   body.dark-mode .bus-stop:hover {
+       background-color: #334250;
+       transform: translateY(-2px);
+       box-shadow: 0 8px 20px rgba(0, 0, 0, 0.15);
+   }
+
+   body.dark-mode .bus-stop-code {
+       color: #3294ac !important;
+       cursor: pointer;
+       transition-duration: 800ms;
+   }
+
+   body.dark-mode .bus-stop-code:hover {
+       color: #a4c5e2 !important;
+   }
+
+   body.dark-mode .list-group-item:first-child,
+   .list-group-item:last-child {
+       transition-duration: 800ms;
+       border-radius: 20px;
+       margin-top: 1em;
+       font-size: 20px;
+   }
+
+   body.dark-mode .list-group-item {
+       background-color: #2e2e2e;
+       color: #fff !important;
+       border: 1px solid #2b2b2b33;
+       box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.233), 0 4px 12px rgba(0, 0, 0, 0.1);
+       padding-top: 1em;
+       padding-bottom: 1em;
+   }
+
+   body.dark-mode .list-group-item:hover {
+       background-color: #334250;
+       transform: translateY(-2px);
+       box-shadow: 0 8px 20px rgba(0, 0, 0, 0.15);
+   }
+
+   /*  */
+   body.dark-mode .card-bz {
+       background-color: #2e2e2e;
+       border: 1px solid #2b2b2b33;
+       box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.233), 0 4px 12px rgba(0, 0, 0, 0.1);
+       border-radius: 25px;
+       padding: 1em;
+       text-align: center;
+       flex: 1 1 calc(20% - 1em);
+       cursor: default;
+       transition: all 0.3s cubic-bezier(0.25, 0.46, 0.45, 0.94);
+   }
+
+
+   body.dark-mode .card-bz:hover {
+       background-color: #334250;
+       transform: translateY(-2px);
+       box-shadow: 0 8px 20px rgba(0, 0, 0, 0.15);
+   }
+
+   body.dark-mode .btn-toPin {
+       background-color: #494949;
+       border: 1px solid #2b2b2b33;
+       box-shadow: 0 20px 40px rgba(0, 0, 0, 0.1), inset 0 1px 0 rgba(61, 61, 61, 0.384);
+       color: #fff;
+   }
+
+   /*  */
+   body.dark-mode .list-group-item.active {
+       z-index: 2;
+       color: #000;
+       background-color: #52718d;
+   }
+
+   body.dark-mode .lg-date {
+       color: #dbdbdb;
+   }
+
+   body.dark-mode .pin-msg {
+       background-color: #2e2e2e;
+       color: #fff !important;
+       border: 1px solid #2b2b2b33;
+       box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.233), 0 4px 12px rgba(0, 0, 0, 0.1);
+       border-radius: 25px;
+       padding-top: 0.5em;
+       padding-bottom: 0.5em;
+       text-align: center;
+       display: flex;
+       align-items: center;
+       justify-content: center;
+       gap: 10px;
+   }
+
+   body.dark-mode .pinned p {
+       text-align: center;
+       color: #fff;
+       cursor: pointer;
+   }
+
+   body.dark-mode .alert-warning {
+       background-color: #332701;
+       color: #ffda6a;
+       border-color: #997404;
+   }
+
+   body.dark-mode .btn-busloc {
+       border: 1px solid #2b2b2b33;
+       box-shadow: 0 20px 40px rgba(0, 0, 0, 0.1), inset 0 1px 0 rgba(61, 61, 61, 0.384);
+       color: #fff;
+   }
+
+   body.dark-mode .fleet-legend span {
+       display: flex;
+       align-items: center;
+       gap: 8px;
+       background-color: #2e2e2e;
+       border: 1px solid #2b2b2b33;
+       box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.233), 0 4px 12px rgba(0, 0, 0, 0.1);
+       padding: 0.5em;
+       border-radius: 15px;
+   }
+
+   body.dark-mode .btn-busloc:disabled {
+       background-color: #3d3d3d;
+       color: #535353;
+       transition: all 0.4s cubic-bezier(0.25, 0.46, 0.45, 0.94);
+       border: 1px solid #2b2b2b;
+       box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.3), 0 4px 12px rgba(0, 0, 0, 0.1);
+       border-radius: 10px;
+   }
