--- a/buszy/css/style-buszy.css
+++ b/buszy/css/style-buszy.css
@@ -443,19 +443,8 @@ table th {
     font-size: 20px;
     border: 1px solid #2b2b2b33;
     box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.233), 0 4px 12px rgba(0, 0, 0, 0.1);
-    padding-top: 0.5em;
-    padding-bottom: 0.5em;
-}
-
-body.dark-mode .list-group-item {
-    padding-top: 0.5em;
-    padding-bottom: 0.5em;
-}
-
-.list-group-item:hover {
-    background-color: #d8e6f3;
-    transform: translateY(-2px);
-    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.15);
+    padding-top: 0.7em;
+    padding-bottom: 0.7em;
 }
 
 .spinner {
@@ -866,7 +855,7 @@ body.dark-mode .bus-stop-code:hover {
 }
 
 body.dark-mode .list-group-item:first-child,
-.list-group-item:last-child {
+.body.dark-mode .list-group-item:last-child {
     transition-duration: 800ms;
     border-radius: 20px;
     margin-top: 1em;
@@ -878,8 +867,8 @@ body.dark-mode .list-group-item {
     color: #fff !important;
     border: 1px solid #2b2b2b33;
     box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.233), 0 4px 12px rgba(0, 0, 0, 0.1);
-    padding-top: 1em;
-    padding-bottom: 1em;
+    padding-top: 0.7em;
+    padding-bottom: 0.7em;
 }
 
 body.dark-mode .list-group-item:hover {
