--- a/delays-tracker/css/style-tdt.css
+++ b/delays-tracker/css/style-tdt.css
@@ -44,6 +44,61 @@ body.dark-mode li.breadcrumb-item a {
 }
 
 
+.list-group-item:first-child,
+.list-group-item:last-child {
+    transition-duration: 800ms;
+    border-radius: 20px;
+    margin-top: 1em;
+    font-size: 20px;
+}
+
+.list-group-item:first-child,
+.list-group-item:last-child {
+    transition-duration: 800ms;
+    border-radius: 20px;
+    margin-top: 1em;
+    font-size: 20px;
+}
+
+.list-group-item {
+    transition-duration: 800ms;
+    border-radius: 20px;
+    margin-top: 1em;
+    font-size: 20px;
+    border: 1px solid #2b2b2b33;
+    box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.233), 0 4px 12px rgba(0, 0, 0, 0.1);
+    padding-top: 0.7em;
+    padding-bottom: 0.7em;
+}
+
+.list-group-item:hover {
+    background-color: #d8e6f3;
+    transform: translateY(-2px);
+    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.15);
+}
+
+.lg-menu {
+    font-size: 20px;
+    margin-bottom: 0px;
+    font-weight: bolder;
+}
+
+
+body.dark-mode .list-group-item {
+    background-color: #2e2e2e;
+    color: #fff !important;
+    border: 1px solid #2b2b2b33;
+    box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.233), 0 4px 12px rgba(0, 0, 0, 0.1);
+    padding-top: 0.7em;
+    padding-bottom: 0.7em;
+}
+
+body.dark-mode .list-group-item:hover {
+    background-color: #334250;
+    transform: translateY(-2px);
+    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.15);
+}
+
 @media (min-width: 995px) {
     .page-header-section {
         padding-top: 7em;
